--- a/src/components/event/event.css
+++ b/src/components/event/event.css
@@ -49,4 +49,5 @@
 :host .content {
 	flex: 1 1 auto;
 	padding: 5px;
+	word-break: break-all;
 }
